--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "fontsource-roboto": "^4.0.0",
+    "json": "^10.0.0",
+    "json-server": "^0.16.3",
+    "json-server-auth": "^2.0.2",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
